# IKindaLikePhysics

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/: Box.h  Collision.h  CollisionResolution.h  Engine.h  Logger.h  Objects.h  Physics.h  PhysicsObject.h  Vector2.h  Window.h
src/: Collision.cpp  CollisionResolution.cpp  Engine.cpp  Physics.cpp  Window.cpp  main.cpp
